@@ -405,6 +405,17 @@
             implementationClass="com.jetbrains.snakecharm.inspections.SmkPyUnboundLocalVariableInspection"
     />
 
+    <localInspection
+            language="Snakemake" shortName="SmkRedundantCommaInspection"
+            enabledByDefault="true"
+            level="WARNING"
+            suppressId="SmkRedundantComma"
+            bundle="SnakemakeBundle"
+            groupKey="INSP.GROUP.snakemake"
+            key="INSP.NAME.redundant.comma.title"
+            implementationClass="com.jetbrains.snakecharm.inspections.SmkRedundantCommaInspection"
+    />
+
     <findUsagesHandlerFactory
             implementation="com.jetbrains.snakecharm.codeInsight.refactoring.SmkFindUsagesHandlerFactory"
             id="Python" order="last, before default"
