@@ -99,6 +99,10 @@ INSP.NAME.wildcards.confusing.name.title=Confusing wildcard name.
 INSP.NAME.wildcards.confusing.name.like.section.message=Confusing wildcard name: ''{0}''. It looks like section name.
 INSP.NAME.wildcards.confusing.name.with.dot.message=Confusing wildcard name: ''{0}'', looks like call chain. Please don''t use dots here.
 
+# SmkRedundantCommaInspection
+INSP.NAME.redundant.comma.title=Comma is unnecessary
+INSP.NAME.redundant.comma.fix.message=Remove redundant comma
+
 # SmkPyUnboundLocalVariableInspection
 INSP.NAME.unbound=Unbound local variable
 
