@@ -1,0 +1,5 @@
+<html>
+<body>
+This inspection shows when comma is unnecessary
+</body>
+</html>
